Allow DOM NodeList as input for diffing